[package]
name = "blake3_merkle"
version = "0.0.6"
edition = "2021"
authors = ["gcxfd <i@rmw.link>"]
license = "Apache-2.0"
description = "blake3 merkle tree"
repository = "https://github.com/rmw-lib/blake3_merkle"
readme = "README.md"
keywords = ["blake3", "merkle"]

[dependencies]
blake3 = "1.3.1"

[dev-dependencies]
rand = "0.8.5"
